# test-rust

./: Cargo.toml  console.yml
src/: main.rs
src/cmd/: mod.rs
src/config/: conf.rs
src/repo/: application.rs  mod.rs  repo.rs
src/router/: mod.rs  router.rs
src/service/: service.rs
